@@ -38,8 +38,8 @@ B. Licence
   Logitech, Saitek) to assign keyboard shortcuts. This software handles
   axes only. Supported are: Reverser, Gear, CruiseControl,
   CombinedThrottle, Throttle, TrainBrake, LocoBrake, DynamicBrake,
-  HandBrake, SmallEjector, Blower, Damper, Stoking, ExhaustWater,
-  LiveWater.
+  HandBrake, SmallEjector, Blower, FireboxDoor, Stoking, ExhaustSteam,
+  ExhaustWater, LiveSteam, LiveWater.
 
   I wrote a guide on how to customize loco controls:
   http://forums.uktrainsim.com/viewtopic.php?f=361&t=139086
@@ -334,9 +334,9 @@ B. Licence
 
   From version 0.5 the steamers received additional support. For the
   controlling not much has changed changed. You have Regulator
-  (Throttle), Reverser and Brakes as usual. The Small Ejector, Blower,
-  Damper, Stoking, ExhaustWater, LiveWater are steamer specific axes you
-  can asign.
+  (Throttle), Reverser and Brakes as usual. The SmallEjector, Blower,
+  FireboxDoor, Stoking, ExhaustSteam, ExhaustWater, LiveSteam,
+  LiveWater are steamer specific axes you can asign.
 
   - Boiler pressure got added with color indicators depending on
     whether the pressure is increasing (green), constant (grey) and
